--- a/.github/workflows/dev_cron.yml
+++ b/.github/workflows/dev_cron.yml
@@ -31,7 +31,7 @@ on:
 jobs:
 
   issues-link:
-    if: github.repository == ''
+    if: github.repository == 'Intel-bigdata/OAP'
     name: issues link
     runs-on: ubuntu-latest
     steps:
