--- a/oap-shuffle/RPMem-shuffle/core/pom.xml
+++ b/oap-shuffle/RPMem-shuffle/core/pom.xml
@@ -15,21 +15,26 @@
     <artifactId>oap-rpmem-shuffle-java</artifactId>
     <version>1.0.0</version>
 
+    <properties>
+        <scala.version>2.12.10</scala.version>
+        <scala.binary.version>2.12</scala.binary.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.12</artifactId>
+            <artifactId>spark-core_${scala.binary.version}</artifactId>
             <version>3.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-network-common_2.12</artifactId>
+            <artifactId>spark-network-common_${scala.binary.version}</artifactId>
             <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.12</artifactId>
+            <artifactId>spark-core_${scala.binary.version}</artifactId>
             <version>3.0.0</version>
             <type>test-jar</type>
             <scope>test</scope>
@@ -46,9 +51,14 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.12</artifactId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
             <version>3.0.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -87,6 +97,12 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <scalaVersion>${scala.version}</scalaVersion>
+                    <args>
+                        <arg>-target:jvm-1.8</arg>
+                    </args>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -170,53 +186,53 @@
                 </configuration>
             </plugin>
         <plugin>
-          <groupId>org.scalatest</groupId>
-          <artifactId>scalatest-maven-plugin</artifactId>
-          <version>2.0.0</version>
-          <!-- Note config is repeated in surefire config -->
-          <configuration>
-            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-            <junitxml>.</junitxml>
-            <filereports>SparkTestSuite.txt</filereports>
-            <argLine>-ea -Xmx3g -Xss4m -XX:ReservedCodeCacheSize=512m -Djava.library.path=/usr/lib64/</argLine>
-            <stderr/>
-            <environmentVariables>
-              <!--
-                Setting SPARK_DIST_CLASSPATH is a simple way to make sure any child processes
-                launched by the tests have access to the correct test-time classpath.
-              -->
-              <SPARK_DIST_CLASSPATH>${test_classpath}</SPARK_DIST_CLASSPATH>
-              <SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>
-              <SPARK_SCALA_VERSION>2.12</SPARK_SCALA_VERSION>
-              <SPARK_TESTING>1</SPARK_TESTING>
-              <JAVA_HOME>${test.java.home}</JAVA_HOME>
-            </environmentVariables>
-            <systemProperties>
-              <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
-              <derby.system.durability>test</derby.system.durability>
-              <java.awt.headless>true</java.awt.headless>
-              <spark.driver.extraJavaOptions>-Djava.library.path=/usr/lib64/</spark.driver.extraJavaOptions>
-              <spark.executor.extraJavaOptions>-Djava.library.path=/usr/lib64/</spark.executor.extraJavaOptions>
-              <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-              <spark.test.home>${session.executionRootDirectory}</spark.test.home>
-              <spark.testing>1</spark.testing>
-              <spark.ui.enabled>false</spark.ui.enabled>
-              <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
-              <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
-              <spark.shuffle.pmof.pmem_list>/dev/dax0.0,/dev/dax1.0</spark.shuffle.pmof.pmem_list>
-              <!-- Needed by sql/hive tests. -->
-              <test.src.tables>__not_used__</test.src.tables>
-            </systemProperties>
-            <tagsToExclude></tagsToExclude>
-          </configuration>
-          <executions>
-            <execution>
-              <id>test</id>
-              <goals>
-                <goal>test</goal>
-              </goals>
-            </execution>
-          </executions>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <version>2.0.0</version>
+            <!-- Note config is repeated in surefire config -->
+            <configuration>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                <junitxml>.</junitxml>
+                <filereports>SparkTestSuite.txt</filereports>
+                <argLine>-ea -Xmx3g -Xss4m -XX:ReservedCodeCacheSize=512m -Djava.library.path=/usr/lib64/</argLine>
+                <stderr/>
+                <environmentVariables>
+                    <!--
+                      Setting SPARK_DIST_CLASSPATH is a simple way to make sure any child processes
+                      launched by the tests have access to the correct test-time classpath.
+                    -->
+                    <SPARK_DIST_CLASSPATH>${test_classpath}</SPARK_DIST_CLASSPATH>
+                    <SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>
+                    <SPARK_SCALA_VERSION>${scala.binary.version}</SPARK_SCALA_VERSION>
+                    <SPARK_TESTING>1</SPARK_TESTING>
+                    <JAVA_HOME>${test.java.home}</JAVA_HOME>
+                </environmentVariables>
+                <systemProperties>
+                    <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
+                    <derby.system.durability>test</derby.system.durability>
+                    <java.awt.headless>true</java.awt.headless>
+                    <spark.driver.extraJavaOptions>-Djava.library.path=/usr/lib64/</spark.driver.extraJavaOptions>
+                    <spark.executor.extraJavaOptions>-Djava.library.path=/usr/lib64/</spark.executor.extraJavaOptions>
+                    <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+                    <spark.test.home>${session.executionRootDirectory}</spark.test.home>
+                    <spark.testing>1</spark.testing>
+                    <spark.ui.enabled>false</spark.ui.enabled>
+                    <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
+                    <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
+                    <spark.shuffle.pmof.pmem_list>/dev/dax0.0,/dev/dax1.0</spark.shuffle.pmof.pmem_list>
+                    <!-- Needed by sql/hive tests. -->
+                    <test.src.tables>__not_used__</test.src.tables>
+                </systemProperties>
+                <tagsToExclude></tagsToExclude>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>test</id>
+                    <goals>
+                        <goal>test</goal>
+                    </goals>
+                </execution>
+            </executions>
         </plugin>
         </plugins>
     </build>
